--- a/main.css
+++ b/main.css
@@ -61,8 +61,9 @@ article {
 
 .wheel {
     position: absolute;
+    width: 500px;
     left: 50%;
-    margin-left: -280px;
+    margin-left: -260px;
     top: 50%;
     margin-top: -165px;
 }
@@ -94,7 +95,7 @@ article {
 .basic {
     position: absolute;
     font-size: 14px;
-    bottom: 166px;
+    bottom: 130px;
     left: 50%;
     margin-left: -92px;
 }
@@ -102,7 +103,7 @@ article {
 .basic__1 {
     position: absolute;
     font-size: 14px;
-    bottom: 130px;
+    bottom: 100px;
     left: 50%;
     margin-left: -132px;
 }
